// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`operatorsTableHeadersConf 1`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "style": {
      "minWidth": "200px",
    },
    "text": "First name",
    "textKey": "firstname",
    "value": "firstname",
  },
  {
    "isBold": true,
    "style": {
      "minWidth": "200px",
    },
    "text": "Last name",
    "textKey": "lastname",
    "value": "lastname",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": true,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "sortable": true,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "formatFn": [Function],
    "isHidden": true,
    "text": "Passcode",
    "textKey": "passcodeCreatedAt",
    "value": "passcodeCreatedAt",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;

exports[`operatorsTableHeadersConf if checklists authentication is enabled 1`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "style": {
      "minWidth": "200px",
    },
    "text": "First name",
    "textKey": "firstname",
    "value": "firstname",
  },
  {
    "isBold": true,
    "style": {
      "minWidth": "200px",
    },
    "text": "Last name",
    "textKey": "lastname",
    "value": "lastname",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": true,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "sortable": true,
    "text": "Stations",
    "textKey": "stationNamesArray",
  },
  {
    "formatFn": [Function],
    "isHidden": false,
    "text": "Passcode",
    "textKey": "passcodeCreatedAt",
    "value": "passcodeCreatedAt",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;
